Se implementa consulta 4 rutas turisticas